[tool.poetry]
name = "decompress-script"
version = "0.1.0"
description = ""
authors = ["ryanapfel <rasapfel@gmail.com>"]
packages = [{ include = "dicom_decompressor" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pylibjpeg = ">=2.0.1,<3.0.0"
pylibjpeg-libjpeg = ">=2.3.0,<3.0.0"
pydicom = ">=3.0.1,<4.0.0"
click = ">=8.2.1,<9.0.0"
pylibjpeg-openjpeg = ">=2.4.0,<3.0.0"

[tool.poetry.dev-dependencies]
pyinstaller = { version = "^6.14.1", markers = "python_version < '3.14'" }

[tool.poetry.scripts]
dicom-decompress = "dicom_decompressor.dicom_decompressor:decompress_directory"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"